# gecode

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile.contribs  Makefile.dep  Makefile.in  README.md  changelog.in  config.icc.in  configure  configure.ac  configure.ac.in  doxygen.conf.in  doxygen.hh.in  experiments.hh  gecode-version.m4  gecode.m4  int.hh  iter.hh  kernel.hh  minimodel.hh  parallel.hh  search.hh  set.hh  variables.vsl  variables.vsl.in  vcpkg.json
cmake/: GecodeConfig.cmake.in  GecodeSources.cmake  GenerateDoxygenCompatibilityAliases.cmake  GenerateVarImp.cmake  RunDoxygenGenerator.cmake  VerifyTestSelection.cmake  gecode-config.cmake.in
contribs/: README
contribs/qecode/: AbstractWorker.hh  Doxyfile  FirstFailValueHeuristic.cc  FirstFailValueHeuristic.hh  Implicative.cc  Implicative.hh  ImplicativeState.cc  ImplicativeState.hh  Makefile.in.in  NaiveValueHeuristics.cc  NaiveValueHeuristics.hh  OptVar.cc  OptVar.hh  QCOPPlus.cc  QCOPPlus.hh  QCSPPlusUnblockable.cc  QCSPPlusUnblockable.hh  README  SDFVariableHeuristic.cc  SDFVariableHeuristic.hh  Strategy.cc  Strategy.hh  StrategyNode.cc  StrategyNode.hh  UnblockableBranching.hh  UnblockableViewValBranching.cc  UnblockableViewValBranching.hh  Work.cc  Work.hh  WorkComparators.hh  WorkManager.cc  WorkManager.hh  Worker.cc  Worker.hh  clean  config.status  configure  configure.ac  extensivecomparator.cc  extensivecomparator.hh  (+29 more)
contribs/qecode/autom4te.cache/: output.0  requests  traces.0
contribs/qecode/examples/: .gdb_history  COMPILING  MatrixGame.cpp  NimFibo.cpp  build.sh  connect-5-3-3-3.cpp  connect4.cpp  network-pricing.cc  network-pricing1.cpp  network-pricing2.cpp  optim2.cc  stress_test.cpp  tictactoe.cpp
contribs/qecode/test/: COMPILING  MatrixGame.cpp  NimFibo.cpp  stress_test.cpp
contribs/quacode/: CMakeLists.txt  FindGecode.cmake  LICENSE  README
contribs/quacode/doxygen/: Doxyfile.conf  getrevision.sh  mainpage.md
contribs/quacode/examples/: baker.cpp  connect-four.cpp  matrix-game.cpp  nim-fibo.cpp  qbf.cpp  qdimacs.cpp  rndQCSP.cpp
contribs/quacode/quacode/: qcsp.hh  qspaceinfo.cpp  qspaceinfo.hh  qspaceinfo.hpp
contribs/quacode/quacode/qint/: qbool.hh  watch.hpp
contribs/quacode/quacode/qint/qbool/: clause.hpp  eq.hpp  eqv.hpp  or.hpp  qbool.cpp  xor.hpp  xorv.hpp
contribs/quacode/quacode/search/: qdfs.cpp  qdfs.hpp
contribs/quacode/quacode/search/sequential/: qdfs.hh  qpath.cpp  qpath.hh
contribs/quacode/quacode/support/: dynamic-list.hh  log.cpp  log.hh
docs/: cmake-build.md
doxygen/: doxygen.conf.in  doxygen.hh.in  reflection.hh
examples/: CMakeLists.txt  all-interval-sort.cc  all-interval-table.cc  all-interval.cc  all-interval.cpp  alpha.cc  alpha.cpp  archimedean-spiral.cpp  assignment.hh  bacp.cc  bacp.cpp  baseline.cc  baseline.cpp  bibd.cc  bibd.cpp  bin-packing.cpp  black-hole.cc  black-hole.cpp  car-sequence.cpp  car-sequencing.cpp  cars.cc  cartesian-heart.cpp  colored-matrix.cpp  crew.cc  crew.cpp  crossword.cpp  crowded-chess-table.cc  crowded-chess.cc  crowded-chess.cpp  descartes-folium.cpp  dispersion.cpp  dominating-queens.cpp  domino.cc  domino.cpp  donald.cc  donald.cpp  double-branch.cpp  efpa.cpp  eq20.cc  eq20.cpp  (+112 more)
examples/bdd/: bddsteiner.cc  sudoku-bdd-const.cc
examples/cpltset/: bddsteiner.cc  sudoku-bdd-const.cc
examples/support/: example.cc  example.hpp  example.icc  options.cc  options.cpp  options.hpp  options.icc
examples/tables/: 0.tab  1.tab  10.tab  11.tab  12.tab  13.tab  14.tab  15.tab  16.tab  17.tab  18.tab  19.tab  2.tab  3.tab  4.tab  5.tab  6.tab  7.tab  8.tab  9.tab
gecode/: bdd.hh  config.hh.in  config.icc.in  cpltset.hh  dds.hh  driver.hh  flatzinc.hh  float.hh  gist.hh  graph.hh  int.hh  iter.hh  kernel.hh  limits.hh  minimodel.hh  scheduling.hh  search.hh  serialization.hh  set.hh  support.hh
images/: gecode-logo.eps
int/: arithmetic.cc  arithmetic.hh  array.cc  bool.cc  bool.hh  branch.cc  branch.hh  channel.cc  channel.hh  count.cc  count.hh  cumulatives.cc  cumulatives.hh  distinct.cc  distinct.hh  dom.cc  dom.hh  element.cc  element.hh  exception.icc  gcc.cc  gcc.hh  int-set.cc  int-set.icc  linear.cc  linear.hh  propagator.icc  regular.cc  regular.hh  rel.cc  rel.hh  sortedness.cc  sortedness.hh  var.icc  view.icc
iter/: ranges-add.icc  ranges-append.icc  ranges-array.icc  ranges-cache.icc  ranges-compl.icc  ranges-diff.icc  ranges-empty.icc  ranges-inter.icc  ranges-minmax.icc  ranges-minus.icc  ranges-offset.icc  ranges-operations.icc  ranges-scale.icc  ranges-singleton.icc  ranges-union.icc  ranges-values.icc  values-ranges.icc
kernel/: array.icc  core.cc  core.icc  memory-manager.cc  propagator.icc  view.icc
minimodel/: arithmetic.cc  bool-expr.cc  bool-expr.icc  bool-rel.icc  lin-expr.cc  lin-expr.icc  lin-rel.icc  matrix.icc  scheduling.cc
misc/: AppleHelpbookInfo.plist  allexamples.perl  allexamples.py  fixautoheader.perl  fixautoheader.py  fixmanifest.perl  fixmanifest.py  fixproperties.sh  gecode-driver.pc.in  gecode-gist.pc.in  gecode-minimodel.pc.in  gecode-scheduling.pc.in  gecode-search.pc.in  gecode-serialization.pc.in  gecode.pc.in  genbranch.perl  genchangelog.perl  genchangelog.py  gencurrentchangelog.perl  gencurrentchangelog.py  genlcovmakefile.perl  genlcovmakefile.py  genlicense.perl  genlicense.py  genrc.perl  genrc.py  genregistry.perl  genresourcefile.perl  genstatistics.perl  genstatistics.py  gentxtchangelog.perl  gentxtchangelog.py  genvariables.perl  genvarimp.perl  genvarimp.py  genxcodeproj.perl  genxcodeproj.py  getrevision.perl  makedepend.perl  makedepend.py  (+4 more)
parallel/: controller.icc  pbab.hh  pcopy-bab.cc  pcopy-bab.hh  pcopy-dfs.cc  pcopy-dfs.hh  pdfs.hh  preco-bab.cc  preco-bab.hh  preco-dfs.cc  preco-dfs.hh  preco-dfs.icc  worker.icc
search/: bab-copy.cc  bab-copy.hh  bab-copy.icc  bab-reco.cc  bab-reco.hh  bab-reco.icc  bab.cc  bab.icc  dfs-copy.cc  dfs-copy.hh  dfs-copy.icc  dfs-reco.cc  dfs-reco.hh  dfs-reco.icc  dfs.cc  dfs.icc  lds.cc  lds.icc  node.hh  node.icc  plain.icc  reco-stack.cc  reco-stack.hh  (+8 more)
(+2617 files in other folders)
