dnl
dnl Author:
dnl   Jeremie Vautard
dnl
dnl Copyright:
dnl   Université d'Orleans, 2005
dnl
dnl Largely inspired from the map configure.ac file by Grégoire Dooms


AC_REVISION([$Revision$])
AC_PREREQ(2.53)
AC_INIT(QECODE, 1.2, jeremie.vautard@univ-orleans.fr)
AC_CONFIG_SRCDIR(qecore.hh)

dnl the names of the generated dlls
AC_SUBST(QECODE,     "qecode")

../../config.status --file Makefile.in:Makefile.in.in

AC_CONFIG_COMMANDS([Makefile.in]) 
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
