dnl
dnl Author:
dnl   Jeremie Vautard
dnl
dnl Copyright:
dnl   Universit d'Orleans, 2005
dnl
dnl Largely inspired from the map configure.ac file by Grgoire Dooms
dnl ***********************************************************[configure.ac]
dnl Copyright (c) 2007, Universite d'Orleans - Jeremie Vautard.
dnl
dnl Permission is hereby granted, free of charge, to any person obtaining a copy
dnl of this software and associated documentation files (the "Software"), to deal
dnl in the Software without restriction, including without limitation the rights
dnl to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
dnl copies of the Software, and to permit persons to whom the Software is
dnl furnished to do so, subject to the following conditions:
dnl 
dnl The above copyright notice and this permission notice shall be included in
dnl all copies or substantial portions of the Software.
dnl 
dnl THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
dnl IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
dnl FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
dnl AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
dnl LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
dnl OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
dnl THE SOFTWARE.
dnl *************************************************************************


AC_REVISION([$Revision$])
AC_PREREQ(2.53)
AC_INIT(QECODE, 1.2, jeremie.vautard@univ-orleans.fr)
AC_CONFIG_SRCDIR(qecode.hh)

dnl the names of the generated dlls
AC_SUBST(QECODE,     "qecode")

../../config.status --file Makefile.in:Makefile.in.in

AC_CONFIG_COMMANDS([Makefile.in]) 
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
